--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     /* 기본 설정 */
     html {
       scroll-behavior: smooth; /* 메뉴 클릭 시 부드럽게 이동 */
+      scroll-padding-top: var(--header-h, 110px);
     }
     body {
       margin: 0;
@@ -59,7 +60,7 @@
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
-      scroll-margin-top: 60px; /* 헤더 높이만큼 이동 */
+      /* scroll-margin-top: 60px; 헤더 높이만큼 이동 */
     }
     section h2 {
       margin-top: 0;
